--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,165 +1,343 @@
+@import url('https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap');
+
 .page {
-  --gray-rgb: 0, 0, 0;
-  --gray-alpha-200: rgba(var(--gray-rgb), 0.08);
-  --gray-alpha-100: rgba(var(--gray-rgb), 0.05);
-
-  --button-primary-hover: #383838;
-  --button-secondary-hover: #f2f2f2;
-
-  display: grid;
-  grid-template-rows: 20px 1fr 20px;
-  align-items: center;
-  justify-items: center;
-  min-height: 100svh;
-  padding: 80px;
-  gap: 64px;
-  font-family: var(--font-geist-sans);
+  width: 100%;
+  min-height: 100%;
+  background-color: white;
 }
 
-@media (prefers-color-scheme: dark) {
-  .page {
-    --gray-rgb: 255, 255, 255;
-    --gray-alpha-200: rgba(var(--gray-rgb), 0.145);
-    --gray-alpha-100: rgba(var(--gray-rgb), 0.06);
+/* Header */
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  padding-left: 30px;
+  padding-right: 30px;
+}
 
-    --button-primary-hover: #ccc;
-    --button-secondary-hover: #1a1a1a;
+.logo {
+  width: 50px;
+  height: auto;
+}
+
+.links ul {
+  display: flex;
+  gap: 30px; 
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  font-family: 'Zen Dots', sans-serif;
+}
+
+.links li {
+  cursor: pointer;
+  font-size: 18px;
+}
+
+
+/* Hero */
+.hero {
+  display: flex;
+  flex-direction: column;
+}
+
+.layer_one {
+  display: flex;
+  flex-direction: row;
+  gap: 60px;
+  align-items: center;
+  padding-left: 300px;
+  margin: 0;
+  padding-bottom: 0;
+}
+
+.layer_one h1{
+  font-family: 'Zen Dots', sans-serif;
+  font-size: 100px;
+  margin-bottom: 35px;
+}
+
+.layer_one img {
+  width: 150px;
+  height: 150px;
+  margin-bottom: 0;
+}
+
+.layer_two {
+  display: flex;
+  justify-content: right;
+  padding-right: 300px;
+  margin: 0;
+}
+
+.layer_two h1{
+  font-family: 'Zen Dots', sans-serif;
+  font-size: 100px;
+  margin-top: 0;
+}
+
+
+/* Marquee */
+.marqueeBox {
+  width: 100%; 
+  overflow: hidden; 
+  background: #1E4AD3; 
+  border: 4px solid black; 
+  position: relative; 
+}
+
+.marqueeWrapper {
+  display: flex;
+  animation: slide 15s linear infinite; 
+}
+
+.marqueeContent {
+  display: flex;
+  align-items: center;
+}
+
+.marqueeItem {
+  font-family: 'Zen Dots', sans-serif;
+  color: white;
+  margin-right: 100px;
+  font-size: 30px;
+  padding: 10px;
+  white-space: nowrap;
+}
+
+@keyframes slide {
+  0% {
+    transform: translateX(-100%); 
+  }
+  100% {
+    transform: translateX(0%); 
   }
 }
 
-.main {
+
+/* About */
+.about{
   display: flex;
-  flex-direction: column;
-  gap: 32px;
-  grid-row-start: 2;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 100px;
+  gap: 20%;
 }
 
-.main ol {
-  font-family: var(--font-geist-mono);
-  padding-left: 0;
-  margin: 0;
-  font-size: 14px;
-  line-height: 24px;
-  letter-spacing: -0.01em;
-  list-style-position: inside;
+.aboutInfo {
+  width: 30%;
 }
 
-.main li:not(:last-of-type) {
-  margin-bottom: 8px;
+.aboutInfo h1 {
+  font-family: 'Zen Dots', sans-serif;
+  font-size: 50px;
+  margin-bottom: 0;
 }
 
-.main code {
-  font-family: inherit;
-  background: var(--gray-alpha-100);
-  padding: 2px 4px;
-  border-radius: 4px;
-  font-weight: 600;
+.aboutInfo p {
+  padding-top: 15px;
+  padding-bottom: 20px;
+  font-family: 'Zen Dots', sans-serif;
+
 }
 
-.ctas {
-  display: flex;
-  gap: 16px;
-}
-
-.ctas a {
-  appearance: none;
-  border-radius: 128px;
-  height: 48px;
-  padding: 0 20px;
+.aboutInfo button {
+  font-family: 'Zen Dots', sans-serif;
+  color: white;
+  background-color: black;
   border: none;
-  border: 1px solid transparent;
-  transition: background 0.2s, color 0.2s, border-color 0.2s;
-  cursor: pointer;
+  padding: 25px;
+  border-radius: 50px;
+}
+
+
+
+/* Project */
+@keyframes scalein {
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+@keyframes scaleout {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(0);
+    opacity: 0;
+  }
+}
+
+.pTitle{
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 16px;
-  line-height: 20px;
-  font-weight: 500;
+  padding-top: 50px;
+  font-family: 'Zen Dots', sans-serif;
+  font-size: 50px;
 }
 
-a.primary {
-  background: var(--foreground);
-  color: var(--background);
-  gap: 8px;
-}
-
-a.secondary {
-  border-color: var(--gray-alpha-200);
-  min-width: 180px;
-}
-
-.footer {
-  grid-row-start: 3;
-  display: flex;
-  gap: 24px;
-}
-
-.footer a {
+.projects {
   display: flex;
   align-items: center;
-  gap: 8px;
+  justify-content: left;
+  width: 75%;
+  height: 600px;
+  margin: auto;
+  background-color: #C3C3C3;
+  padding: 40px;
 }
 
-.footer img {
-  flex-shrink: 0;
+
+.leftZone {
+  width: 350px;
+  display: flex;
+  align-items: center;
+  justify-content: left;
 }
 
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  a.primary:hover {
-    background: var(--button-primary-hover);
-    border-color: transparent;
-  }
-
-  a.secondary:hover {
-    background: var(--button-secondary-hover);
-    border-color: transparent;
-  }
-
-  .footer a:hover {
-    text-decoration: underline;
-    text-underline-offset: 4px;
-  }
+.list {
+  font-family: 'Zen Dots', sans-serif;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  color: white;
 }
 
-@media (max-width: 600px) {
-  .page {
-    padding: 32px;
-    padding-bottom: 80px;
-  }
-
-  .main {
-    align-items: center;
-  }
-
-  .main ol {
-    text-align: center;
-  }
-
-  .ctas {
-    flex-direction: column;
-  }
-
-  .ctas a {
-    font-size: 14px;
-    height: 40px;
-    padding: 0 16px;
-  }
-
-  a.secondary {
-    min-width: auto;
-  }
-
-  .footer {
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-  }
+.item{
+  margin-bottom: 25px;
 }
 
-@media (prefers-color-scheme: dark) {
-  .logo {
-    filter: invert();
-  }
+.item input[type="radio"] {
+  display: none;
+}
+
+.item input[type="radio"] ~ label {
+  display: block;
+  padding: 10px;
+  transition: opacity 0.3s ease;
+}
+
+.item input[type="radio"] ~ label:hover {
+  opacity: 0.5;
+  cursor: pointer;
+}
+
+.item input[type="radio"]:checked ~ label {
+  opacity: 1;
+  border-right: 3px solid #1E4AD3;
+}
+
+.middleBorder {
+  width: 2px;
+  background-color: #eee;
+}
+
+.rightZone {
+  flex-grow: 1;
+  position: relative;
+  
+}
+
+.content {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  
+}
+
+.active .starWrapper{
+  animation: scalein 0.75s forwards;
+}
+
+.inactive .starWrapper{
+  animation: scaleout 0.75s forwards;
+}
+
+.active .linkContainer{
+  animation: scalein 0s forwards;
+}
+
+.inactive .linkContainer{
+  animation: scaleout 0s forwards;
+}
+
+.projectImage{
+  width: 300px;
+  height: auto;
+}
+
+.starWrapper {
+  position: relative;
+  display: inline-block;
+  transform: scale(0);
+  opacity: 0;
+  transition: all 0.75s ease-out;
+}
+
+.starImage {
+  display: block; 
+  width: 250px;
+  height: auto;
+}
+
+.starText {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-family: 'Zen Dots', sans-serif;
+  color: white; /* Adjust text color for contrast */
+  font-size: 1.5rem; /* Adjust font size as needed */
+  text-align: center;
+  pointer-events: none; /* Prevent text from interfering with mouse events */
+  font-size: 35px;
+}
+
+.linkContainer{
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  padding-top: 40px;
+}
+
+.siteLink{
+  font-family: 'Zen Dots', sans-serif;
+  color: white;
+  background-color: black;
+  border: none;
+  padding: 25px;
+  border-radius: 50px;
+    
+  
+}
+
+.githubIcon {
+  font-size: 3rem; 
+  margin-top: 10px;
+}
+
+
+
+
+/* Skills */
+.sTitle {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 50px;
+  font-family: 'Zen Dots', sans-serif;
+  font-size: 50px;
 }
