--- a/app/page.module.css
+++ b/app/page.module.css
@@ -57,10 +57,11 @@
   flex-direction: row;
   gap: 60px;
   align-items: center;
-  padding-left: 300px;
+  justify-content: center;
   margin: 0;
   padding-bottom: 0;
 }
+
 
 .layer_one h1{
   font-family: 'Zen Dots', sans-serif;
@@ -76,10 +77,10 @@
 
 .layer_two {
   display: flex;
-  justify-content: right;
-  padding-right: 300px;
+  justify-content: center;
   margin: 0;
 }
+
 
 .layer_two h1{
   font-family: 'Zen Dots', sans-serif;
@@ -489,7 +490,402 @@
     flex-direction: row;
     gap: 10px;
     align-items: center;
-    padding-left: 40px;
+    justify-content: center;
+    margin: 0;
+    padding-bottom: 0;
+  }
+  
+  .layer_one h1{
+    font-family: 'Zen Dots', sans-serif;
+    font-size: 40px;
+    margin-bottom: 20px;
+  }
+  
+  .layer_one img {
+    width: 50px;
+    height: 50px;
+    margin-bottom: 0;
+  }
+  
+  .layer_two {
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    margin-bottom: 30px;
+  }
+  
+  .layer_two h1{
+    font-family: 'Zen Dots', sans-serif;
+    font-size: 40px;
+    margin-top: 0;
+  }
+
+  .marqueeBox {
+    width: 100%; 
+    overflow: hidden; 
+    background: #1E4AD3; 
+    border: 4px solid black; 
+    position: relative; 
+  }
+  
+  .marqueeWrapper {
+    display: flex;
+    animation: slide 15s linear infinite; 
+  }
+  
+  .marqueeContent {
+    display: flex;
+    align-items: center;
+  }
+  
+  .marqueeItem {
+    font-family: 'Zen Dots', sans-serif;
+    color: white;
+    margin-right: 100px;
+    font-size: 20px;
+    padding: 1px;
+    white-space: nowrap;
+  }
+
+  /* About */
+  .about {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+  }
+
+  .aboutInfo{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 300px;
+  }
+  
+  .aboutInfo h1 {
+    font-family: 'Zen Dots', sans-serif;
+    font-size: 35px;
+    margin-bottom: 0;
+  }
+  
+  .aboutInfo p {
+    text-align: center;
+    font-size: 15px;
+    padding-top: 15px;
+    padding-bottom: 20px;
+    font-family: 'Zen Dots', sans-serif;
+  }
+  
+  .aboutInfo button {
+    font-family: 'Zen Dots', sans-serif;
+    color: white;
+    background-color: black;
+    border: none;
+    padding: 25px;
+    border-radius: 50px;
+  }
+
+  .headshot img {
+    display: none;
+  }
+
+
+  /* Projects */
+  .pTitle{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 50px;
+    font-family: 'Zen Dots', sans-serif;
+    font-size: 35px;
+  }
+
+  .projects {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    width: 90%;
+    height: 400px;
+    margin: auto;
+    background-color: #C3C3C3;
+    padding: 10px;
+  }
+
+  .leftZone {
+    width: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: left;
+  }
+  
+  .list {
+    font-family: 'Zen Dots', sans-serif;
+    font-size: 10px;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    color: white;
+  }
+
+  .item{
+    margin-bottom: 15px;
+  }
+
+  .item input[type="radio"] {
+    display: none;
+  }
+  
+  .item input[type="radio"] ~ label {
+    display: block;
+    padding: 10px;
+    transition: opacity 0.3s ease;
+  }
+  
+  .item input[type="radio"] ~ label:hover {
+    opacity: 0.5;
+    cursor: pointer;
+  }
+  
+  .item input[type="radio"]:checked ~ label {
+    opacity: 1;
+    border-right: 3px solid #1E4AD3;
+  }
+  
+  .middleBorder {
+    width: 2px;
+    background-color: #eee;
+  }
+  
+  .rightZone {
+    flex-grow: 1;
+    position: relative;
+    
+  }
+  
+  .content {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+  }
+  
+  .active .starWrapper{
+    animation: scalein 0.75s forwards;
+  }
+  
+  .inactive .starWrapper{
+    animation: scaleout 0.75s forwards;
+  }
+  
+  .active .linkContainer{
+    animation: scalein 0s forwards;
+  }
+  
+  .inactive .linkContainer{
+    animation: scaleout 0s forwards;
+  }
+  
+  
+  .starWrapper {
+    position: relative;
+    display: inline-block;
+    transform: scale(0);
+    opacity: 0;
+    transition: all 0.75s ease-out;
+  }
+  
+  .starImage {
+    display: block; 
+    width: 140px;
+    height: auto;
+  }
+  
+  .starText {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: 'Zen Dots', sans-serif;
+    color: white; /* Adjust text color for contrast */
+    font-size: 1.5rem; /* Adjust font size as needed */
+    text-align: center;
+    pointer-events: none; /* Prevent text from interfering with mouse events */
+    font-size: 20px;
+  }
+  
+  .linkContainer{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    padding-top: 20px;
+  }
+  
+  .siteLink{
+    font-family: 'Zen Dots', sans-serif;
+    color: white;
+    background-color: black;
+    border: none;
+    padding: 15px;
+    border-radius: 50px;
+    font-size: 10px;
+    
+  }
+ 
+
+  /* Skills */
+  .sTitle {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 50px;
+    font-family: 'Zen Dots', sans-serif;
+    font-size: 35px;
+  }
+
+  .skillsContainer {
+    display: grid;
+    grid-template-columns: repeat(8, 40px); /* Fixed width columns */
+    grid-template-rows: 50% 50%;
+    padding: 10px;
+    grid-gap: 2px;
+    justify-content: center;
+    margin-bottom: 70px;
+  }
+  
+  .gridItem {
+    padding: 20px;
+    text-align: center;
+    grid-column: span 2
+  }
+  
+  .gridItem:nth-child(5) {
+    grid-column: 2 / span 2;
+  }
+  
+  
+  .iconWrapper {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;  
+    height: 50px;
+    background-color: black;  
+    border-radius: 50%;  
+  }
+  
+  
+  .icon {
+    font-size: 20px; 
+    color: white;  
+  }
+
+  /* Contact */
+  .contactContainer {
+    width: 100%;
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 50px 0 20px 0; /* Adjust bottom padding as needed */
+  }
+  
+  .contactTitle {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 50px;
+    font-family: 'Zen Dots', sans-serif;
+    font-size: 35px;
+    color: white;
+  }
+  
+  .alt {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    gap: 10px; /* Adjust the gap between columns */
+    color: white;
+    padding-bottom: 50px;
+    
+  }
+  
+  .alt dt {
+    font-size: 15px;
+    font-family: 'Zen Dots', sans-serif;
+    color: #1E4AD3;
+    padding-left: 30px;
+  }
+  
+  .alt dd {
+    font-size: 10px;
+    font-family: 'Zen Dots', sans-serif;
+    color: white;
+    margin: 0; 
+    padding-left: 10px;
+    padding-right: 20px;
+  }
+  
+  .iconLinks{
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+    padding-bottom: 50px;
+  }
+  
+  .githubIconF{
+    font-size: 3rem; 
+    color: #1E4AD3;
+  }
+  
+  .linkedinIconF{
+    font-size: 3rem; 
+    color: #1E4AD3;
+  }
+  
+  .copyright{
+    font-family: 'Zen Dots', sans-serif;
+    font-size: 0.8em;
+    text-align: center;
+    color: white;
+    margin-top: 1em;
+  }
+}
+
+
+@media (max-width: 425px) {
+  /* Header */
+  .header {
+    padding-left: 10px; 
+    padding-right: 10px; 
+  }
+
+  .logo {
+    width: 30px; 
+  }
+
+  .links ul {
+    display: flex; 
+    gap: 10px; 
+    padding: 0;
+    margin: 0;
+  }
+
+  .links li {
+    font-size: 10px; 
+  }
+
+  /* Hero */
+  .layer_one {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    align-items: center;
+    padding-left: 60px;
     margin: 0;
     padding-bottom: 0;
   }
@@ -509,7 +905,7 @@
   .layer_two {
     display: flex;
     justify-content: left;
-    padding-left: 90px;
+    padding-left: 110px;
     margin: 0;
     margin-bottom: 30px;
   }
@@ -517,6 +913,401 @@
   .layer_two h1{
     font-family: 'Zen Dots', sans-serif;
     font-size: 40px;
+    margin-top: 0;
+  }
+
+  .marqueeBox {
+    width: 100%; 
+    overflow: hidden; 
+    background: #1E4AD3; 
+    border: 4px solid black; 
+    position: relative; 
+  }
+  
+  .marqueeWrapper {
+    display: flex;
+    animation: slide 15s linear infinite; 
+  }
+  
+  .marqueeContent {
+    display: flex;
+    align-items: center;
+  }
+  
+  .marqueeItem {
+    font-family: 'Zen Dots', sans-serif;
+    color: white;
+    margin-right: 100px;
+    font-size: 20px;
+    padding: 1px;
+    white-space: nowrap;
+  }
+
+  /* About */
+  .about {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+  }
+
+  .aboutInfo{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 300px;
+  }
+  
+  .aboutInfo h1 {
+    font-family: 'Zen Dots', sans-serif;
+    font-size: 35px;
+    margin-bottom: 0;
+  }
+  
+  .aboutInfo p {
+    text-align: center;
+    font-size: 15px;
+    padding-top: 15px;
+    padding-bottom: 20px;
+    font-family: 'Zen Dots', sans-serif;
+  }
+  
+  .aboutInfo button {
+    font-family: 'Zen Dots', sans-serif;
+    color: white;
+    background-color: black;
+    border: none;
+    padding: 25px;
+    border-radius: 50px;
+  }
+
+  .headshot img {
+    display: none;
+  }
+
+
+  /* Projects */
+  .pTitle{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 50px;
+    font-family: 'Zen Dots', sans-serif;
+    font-size: 35px;
+  }
+
+  .projects {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    width: 90%;
+    height: 400px;
+    margin: auto;
+    background-color: #C3C3C3;
+    padding: 10px;
+  }
+
+  .leftZone {
+    width: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: left;
+  }
+  
+  .list {
+    font-family: 'Zen Dots', sans-serif;
+    font-size: 10px;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    color: white;
+  }
+
+  .item{
+    margin-bottom: 15px;
+  }
+
+  .item input[type="radio"] {
+    display: none;
+  }
+  
+  .item input[type="radio"] ~ label {
+    display: block;
+    padding: 10px;
+    transition: opacity 0.3s ease;
+  }
+  
+  .item input[type="radio"] ~ label:hover {
+    opacity: 0.5;
+    cursor: pointer;
+  }
+  
+  .item input[type="radio"]:checked ~ label {
+    opacity: 1;
+    border-right: 3px solid #1E4AD3;
+  }
+  
+  .middleBorder {
+    width: 2px;
+    background-color: #eee;
+  }
+  
+  .rightZone {
+    flex-grow: 1;
+    position: relative;
+    
+  }
+  
+  .content {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+  }
+  
+  .active .starWrapper{
+    animation: scalein 0.75s forwards;
+  }
+  
+  .inactive .starWrapper{
+    animation: scaleout 0.75s forwards;
+  }
+  
+  .active .linkContainer{
+    animation: scalein 0s forwards;
+  }
+  
+  .inactive .linkContainer{
+    animation: scaleout 0s forwards;
+  }
+  
+  
+  .starWrapper {
+    position: relative;
+    display: inline-block;
+    transform: scale(0);
+    opacity: 0;
+    transition: all 0.75s ease-out;
+  }
+  
+  .starImage {
+    display: block; 
+    width: 140px;
+    height: auto;
+  }
+  
+  .starText {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: 'Zen Dots', sans-serif;
+    color: white; /* Adjust text color for contrast */
+    font-size: 1.5rem; /* Adjust font size as needed */
+    text-align: center;
+    pointer-events: none; /* Prevent text from interfering with mouse events */
+    font-size: 20px;
+  }
+  
+  .linkContainer{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    padding-top: 20px;
+  }
+  
+  .siteLink{
+    font-family: 'Zen Dots', sans-serif;
+    color: white;
+    background-color: black;
+    border: none;
+    padding: 15px;
+    border-radius: 50px;
+    font-size: 10px;
+    
+  }
+ 
+
+  /* Skills */
+  .sTitle {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 50px;
+    font-family: 'Zen Dots', sans-serif;
+    font-size: 35px;
+  }
+
+  .skillsContainer {
+    display: grid;
+    grid-template-columns: repeat(8, 40px); /* Fixed width columns */
+    grid-template-rows: 50% 50%;
+    padding: 10px;
+    grid-gap: 2px;
+    justify-content: center;
+    margin-bottom: 70px;
+  }
+  
+  .gridItem {
+    padding: 20px;
+    text-align: center;
+    grid-column: span 2
+  }
+  
+  .gridItem:nth-child(5) {
+    grid-column: 2 / span 2;
+  }
+  
+  
+  .iconWrapper {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;  
+    height: 50px;
+    background-color: black;  
+    border-radius: 50%;  
+  }
+  
+  
+  .icon {
+    font-size: 20px; 
+    color: white;  
+  }
+
+  /* Contact */
+  .contactContainer {
+    width: 100%;
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 50px 0 20px 0; /* Adjust bottom padding as needed */
+  }
+  
+  .contactTitle {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 50px;
+    font-family: 'Zen Dots', sans-serif;
+    font-size: 35px;
+    color: white;
+  }
+  
+  .alt {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    gap: 10px; /* Adjust the gap between columns */
+    color: white;
+    padding-bottom: 50px;
+    
+  }
+  
+  .alt dt {
+    font-size: 15px;
+    font-family: 'Zen Dots', sans-serif;
+    color: #1E4AD3;
+    padding-left: 30px;
+  }
+  
+  .alt dd {
+    font-size: 10px;
+    font-family: 'Zen Dots', sans-serif;
+    color: white;
+    margin: 0; 
+    padding-left: 10px;
+    padding-right: 20px;
+  }
+  
+  .iconLinks{
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+    padding-bottom: 50px;
+  }
+  
+  .githubIconF{
+    font-size: 3rem; 
+    color: #1E4AD3;
+  }
+  
+  .linkedinIconF{
+    font-size: 3rem; 
+    color: #1E4AD3;
+  }
+  
+  .copyright{
+    font-family: 'Zen Dots', sans-serif;
+    font-size: 0.8em;
+    text-align: center;
+    color: white;
+    margin-top: 1em;
+  }
+}
+
+@media (max-width: 768px) {
+  /* Header */
+  .header {
+    padding-left: 10px; 
+    padding-right: 10px; 
+  }
+
+  .logo {
+    width: 30px; 
+  }
+
+  .links ul {
+    display: flex; 
+    gap: 10px; 
+    padding: 0;
+    margin: 0;
+  }
+
+  .links li {
+    font-size: 10px; 
+  }
+
+  /* Hero */
+  .layer_one {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    align-items: center;
+    padding-left: 20%;
+    margin: 0;
+    padding-bottom: 0;
+  }
+  
+  .layer_one h1{
+    font-family: 'Zen Dots', sans-serif;
+    font-size: 60px;
+    margin-bottom: 20px;
+  }
+  
+  .layer_one img {
+    width: 80px;
+    height: 80px;
+    margin-bottom: 0;
+  }
+  
+  .layer_two {
+    display: flex;
+    justify-content: left;
+    padding-left: 40%;
+    margin: 0;
+    margin-bottom: 30px;
+  }
+  
+  .layer_two h1{
+    font-family: 'Zen Dots', sans-serif;
+    font-size: 60px;
     margin-top: 0;
   }
 
