--- a/app/page.module.css
+++ b/app/page.module.css
@@ -497,13 +497,13 @@
   
   .layer_one h1{
     font-family: 'Zen Dots', sans-serif;
-    font-size: 40px;
+    font-size: 30px;
     margin-bottom: 20px;
   }
   
   .layer_one img {
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     margin-bottom: 0;
   }
   
@@ -516,7 +516,7 @@
   
   .layer_two h1{
     font-family: 'Zen Dots', sans-serif;
-    font-size: 40px;
+    font-size: 30px;
     margin-top: 0;
   }
 
@@ -885,14 +885,14 @@
     flex-direction: row;
     gap: 10px;
     align-items: center;
-    padding-left: 60px;
+    justify-content: center;
     margin: 0;
     padding-bottom: 0;
   }
   
   .layer_one h1{
     font-family: 'Zen Dots', sans-serif;
-    font-size: 40px;
+    font-size: 30px;
     margin-bottom: 20px;
   }
   
@@ -904,15 +904,14 @@
   
   .layer_two {
     display: flex;
-    justify-content: left;
-    padding-left: 110px;
+    justify-content: center;
     margin: 0;
     margin-bottom: 30px;
   }
   
   .layer_two h1{
     font-family: 'Zen Dots', sans-serif;
-    font-size: 40px;
+    font-size: 30px;
     margin-top: 0;
   }
 
@@ -1280,34 +1279,33 @@
     flex-direction: row;
     gap: 10px;
     align-items: center;
-    padding-left: 20%;
+    justify-content: center;
     margin: 0;
     padding-bottom: 0;
   }
   
   .layer_one h1{
     font-family: 'Zen Dots', sans-serif;
-    font-size: 60px;
+    font-size: 50px;
     margin-bottom: 20px;
   }
   
   .layer_one img {
-    width: 80px;
-    height: 80px;
+    width: 70px;
+    height: 70px;
     margin-bottom: 0;
   }
   
   .layer_two {
     display: flex;
-    justify-content: left;
-    padding-left: 40%;
+    justify-content: center;
     margin: 0;
     margin-bottom: 30px;
   }
   
   .layer_two h1{
     font-family: 'Zen Dots', sans-serif;
-    font-size: 60px;
+    font-size: 50px;
     margin-top: 0;
   }
 
