--- a/app/page.module.css
+++ b/app/page.module.css
@@ -312,10 +312,10 @@
   left: 50%;
   transform: translate(-50%, -50%);
   font-family: 'Zen Dots', sans-serif;
-  color: white; /* Adjust text color for contrast */
-  font-size: 1.5rem; /* Adjust font size as needed */
+  color: white; 
+  font-size: 1.5rem; 
   text-align: center;
-  pointer-events: none; /* Prevent text from interfering with mouse events */
+  pointer-events: none; 
   font-size: 35px;
 }
 
@@ -359,7 +359,7 @@
 
 .skillsContainer {
   display: grid;
-  grid-template-columns: repeat(8, 100px); /* Fixed width columns */
+  grid-template-columns: repeat(8, 100px); 
   grid-template-rows: 50% 50%;
   padding: 10px;
   grid-gap: 2px;
@@ -402,7 +402,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 50px 0 20px 0; /* Adjust bottom padding as needed */
+  padding: 50px 0 20px 0; 
 }
 
 .contactTitle {
@@ -419,7 +419,7 @@
 .alt {
   display: grid;
   grid-template-columns: auto 1fr;
-  gap: 10px; /* Adjust the gap between columns */
+  gap: 10px; 
   color: white;
   padding-bottom: 50px;
   
@@ -712,10 +712,10 @@
     left: 50%;
     transform: translate(-50%, -50%);
     font-family: 'Zen Dots', sans-serif;
-    color: white; /* Adjust text color for contrast */
-    font-size: 1.5rem; /* Adjust font size as needed */
+    color: white; 
+    font-size: 1.5rem; 
     text-align: center;
-    pointer-events: none; /* Prevent text from interfering with mouse events */
+    pointer-events: none; 
     font-size: 20px;
   }
   
@@ -750,7 +750,7 @@
 
   .skillsContainer {
     display: grid;
-    grid-template-columns: repeat(8, 40px); /* Fixed width columns */
+    grid-template-columns: repeat(8, 40px); 
     grid-template-rows: 50% 50%;
     padding: 10px;
     grid-gap: 2px;
@@ -792,7 +792,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 50px 0 20px 0; /* Adjust bottom padding as needed */
+    padding: 50px 0 20px 0;
   }
   
   .contactTitle {
@@ -808,7 +808,7 @@
   .alt {
     display: grid;
     grid-template-columns: auto 1fr;
-    gap: 10px; /* Adjust the gap between columns */
+    gap: 10px; 
     color: white;
     padding-bottom: 50px;
     
@@ -1107,10 +1107,10 @@
     left: 50%;
     transform: translate(-50%, -50%);
     font-family: 'Zen Dots', sans-serif;
-    color: white; /* Adjust text color for contrast */
-    font-size: 1.5rem; /* Adjust font size as needed */
+    color: white; 
+    font-size: 1.5rem; 
     text-align: center;
-    pointer-events: none; /* Prevent text from interfering with mouse events */
+    pointer-events: none; 
     font-size: 20px;
   }
   
@@ -1145,7 +1145,7 @@
 
   .skillsContainer {
     display: grid;
-    grid-template-columns: repeat(8, 40px); /* Fixed width columns */
+    grid-template-columns: repeat(8, 40px); 
     grid-template-rows: 50% 50%;
     padding: 10px;
     grid-gap: 2px;
@@ -1187,7 +1187,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 50px 0 20px 0; /* Adjust bottom padding as needed */
+    padding: 50px 0 20px 0; 
   }
   
   .contactTitle {
@@ -1203,7 +1203,7 @@
   .alt {
     display: grid;
     grid-template-columns: auto 1fr;
-    gap: 10px; /* Adjust the gap between columns */
+    gap: 10px; 
     color: white;
     padding-bottom: 50px;
     
@@ -1501,10 +1501,10 @@
     left: 50%;
     transform: translate(-50%, -50%);
     font-family: 'Zen Dots', sans-serif;
-    color: white; /* Adjust text color for contrast */
-    font-size: 1.5rem; /* Adjust font size as needed */
+    color: white; 
+    font-size: 1.5rem; 
     text-align: center;
-    pointer-events: none; /* Prevent text from interfering with mouse events */
+    pointer-events: none; 
     font-size: 20px;
   }
   
@@ -1539,7 +1539,7 @@
 
   .skillsContainer {
     display: grid;
-    grid-template-columns: repeat(8, 40px); /* Fixed width columns */
+    grid-template-columns: repeat(8, 40px); 
     grid-template-rows: 50% 50%;
     padding: 10px;
     grid-gap: 2px;
@@ -1581,7 +1581,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 50px 0 20px 0; /* Adjust bottom padding as needed */
+    padding: 50px 0 20px 0; 
   }
   
   .contactTitle {
@@ -1597,7 +1597,7 @@
   .alt {
     display: grid;
     grid-template-columns: auto 1fr;
-    gap: 10px; /* Adjust the gap between columns */
+    gap: 10px; 
     color: white;
     padding-bottom: 50px;
     
